[package]
name = "wasm-wgpu"
version = "0.1.0"
edition = "2021"


[dependencies]
#egui = "0.30.0" #Immediate mode GUI library
winit = "0.30.9"
pollster = "0.4.0"
bytemuck = "1.22.0"
cgmath = "0.18.0"
web-time = "1.1.0"
rand_pcg = "0.9.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "24.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
#wasm-bindgen = "0.2.100"
#js-sys = "0.3.77" #In the future, standard js functionality may(?) be useful? Probably not, this will be accessed through cross-platform libraries such as wgpu and winit
wgpu = { version = "24.0.1", features = ["webgl", "webgpu"] }

# [features]
# webgl-backend
# webgpu-backend
# desktop

[profile.release]
strip = true
opt-level = "z"
lto = true
#codegen-units = 1 #This can be uncommented to make the release binary even smaller, though it will compile slower since the build is less parallel
